--- a/client-2/src/pages/home/Home.module.css
+++ b/client-2/src/pages/home/Home.module.css
@@ -7,38 +7,81 @@
     background:linear-gradient(0turn, #be2600, rgb(255, 123, 0));
 }
 
+.allFilters{
+    width: 100%;
+    height: 9rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    padding-top: .5rem;
+    font-weight: 600;
+}
+
 .filterDiets{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 10px;
-    height: 20px;
+    width: 100%;
+    height: auto;
+    align-items: center;
 }
 
-.filterDiets select{
-    width: 150px;
-    color: white;
+.dietsOptions{
+    display: flex;
+    gap: 1rem;
+
 }
 
-.filterDiets p{
+.allFilters select{
+    background-color: #0b0149;
     color: white;
+    text-align: center;
+    outline: none;
+    cursor: pointer;
+    border-radius: .2rem;
+}
+
+.dietsSelec{
+    display: flex;
+    flex-wrap: wrap;
+    width: 40rem;
+    white-space: nowrap;
+    gap: 1rem;
+    justify-content: center;
 }
 
 .diet{
     display: flex;
     flex-direction: row;
     font-size: .4em;
-    justify-content: center;
-    align-items: center;
+    background-color: #0b0149;
     color: white;
-    gap: 5px;
-    border: solid 1px white;
+    gap: .8rem;
+    border: solid 1px #0b0149;
     border-radius: 5px;
-    padding: 4px;
+    padding-left: .7rem;
+    transition: all .3s;
+    cursor: context-menu;
 }
 
 .diet button{
-    color: rgb(0, 0, 0);
-    background-color: red;
-    width: 15px;
+    color: rgb(255, 0, 0);
+    background-color: rgb(255, 255, 255);
+    width:1rem;
+    right: 0;
     border: none;
+    border-radius: .2rem;
+    text-align: center;
+    cursor: pointer;
+}
+
+.diet:hover{
+    transform: scale(1.1);
+}
+
+.filterTwo{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
 }
