--- a/client-2/src/pages/landing/Landing.module.css
+++ b/client-2/src/pages/landing/Landing.module.css
@@ -6,7 +6,6 @@
     align-items: center;
     justify-content: center;
     background: linear-gradient(0.1turn, rgb(255, 165, 0),   rgb(255, 165, 0) ,rgb(255, 123, 0));
-    /* background: linear-gradient(to bottom right, rgb(255, 165, 0), rgb(255, 255, 255)); */
 }
 
 
@@ -14,20 +13,72 @@
     display: flex;
     width: 70%;
     height: 70%;
-    border: 1px solid black;
     position: relative;
+    box-shadow: 37px 37px 22px 6px rgba(0,0,0,0.81);
+    -webkit-box-shadow: 37px 37px 22px 6px rgba(0,0,0,0.81);
+    -moz-box-shadow: 37px 37px 22px 6px rgba(0,0,0,0.81);
 }
-
-
-.container span{
-    position: absolute;
-    font-weight: 800;
-    font-size: larger;
-    color: wheat;
-}
-
 
 .img{
     width: 100%;
     height: 100%;
+    border-radius: 1rem;
+}
+
+.home{
+    width: 15rem;
+    height: 3.6rem;
+    font-family: Inter;
+    font-size: 1.8em;
+    margin-top: 4rem;
+    border-radius: .3rem;
+    border:none;
+    background-color: #0b0149;
+    color: white;
+    cursor: pointer;
+    transition: all .3s;
+}
+
+.home:hover{
+    background-color: white;
+    color: #0b0149;
+    transform: scale(1.1);
+}
+
+.thebest{
+    position: absolute;
+    font-family: cursive;
+    font-weight: 500;
+    font-size: 3em;
+    color: rgb(255, 255, 255);
+    top: 1.8rem;
+    left: 2rem;
+}
+
+.recipes{
+    position: absolute;
+    font-family: cursive;
+    font-size: 4.4em;
+    font-weight: 800;
+    color: rgb(255, 123, 0);
+    top: 3rem;
+    left: 8rem;
+}
+
+.leave{
+    position: absolute;
+    color: white;
+    font-size: 4rem;
+    bottom: 10rem;
+    right: 10rem;
+    font-weight: 600;
+}
+
+.us{
+    position: absolute;
+    color: white;
+    font-size: 3rem;
+    bottom: 6rem;
+    right: 9rem;
+    font-weight: 600;
 }
