--- a/client-2/src/App.module.css
+++ b/client-2/src/App.module.css
@@ -3,4 +3,5 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-image: url("https://img.freepik.com/vector-gratis/papel-pintado-mural-restaurante_23-2148695092.jpg?t=st=1689053104~exp=1689053704~hmac=2d32e3a2fea975074efefa1bcc8f7a278b87bd09cb914619ef860076559eb8ef");
 }
