--- a/client-2/src/components/card/Card.module.css
+++ b/client-2/src/components/card/Card.module.css
@@ -2,7 +2,6 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
     align-items: center;
     min-width: 150px;
     width: 350px;
@@ -10,8 +9,8 @@
     border-radius: 5px;
     padding: 8px;
     transition: all .3s;
-    background-color: #d9d6d6;
-    color: #0b0149;
+    background-color: #ffffff;
+    color: #775909;
     box-shadow: 3px 6px 12px 5px rgba(0, 0, 0, 0.75);
 -webkit-box-shadow: 3px 6px 12px 5px rgba(0, 0, 0, 0.75);
 -moz-box-shadow: 3px 6px 12px 5px rgba(0, 0, 0, 0.75);
@@ -20,9 +19,10 @@ font-size: 1.2em;
 
 .img{
     width: 100%;
-    height: 50%;
+    height: 70%;
     background-size: cover;
     z-index: 10;
+    transition: all .3s;
 }
 
 .detail{
@@ -30,7 +30,7 @@ font-size: 1.2em;
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    margin: 10px;
+    margin: .6rem;
     text-align: center;
 }
 
@@ -40,15 +40,15 @@ font-size: 1.2em;
 
 .button{
     width: 120px;
-    height: 40px;
-    padding: 10px 10px;
-    background-color:#0b0149;
-    color: rgb(255, 255, 255);
-    border: none;
+    height: 38px;
+    background-color: transparent;
+    color: #775909;
+    border: solid 1px #775909;
     border-radius: 5px;
     transition: all .3s;
     font-weight: 600;
-    font-size: 1em;
+    font-size: .8em;
+    display: none;
 }
 
 .button:hover{
@@ -71,10 +71,26 @@ font-size: 1.2em;
 }
 
 .decoration{
+    width: 100%;
+    height: 1.5rem;
     position: absolute;
-    width: 5rem;
-    height: 5rem;
-    background-color: #0b0149;
-    top: 0;
-    left: 0;
+    bottom: 0;
+    background: linear-gradient(0turn, #775909, #ffffff);
+    transition: all .3s;
+}
+
+.icon{
+    margin-top: 0rem;
+}
+
+.card:hover .img{
+    height: 50%;
+}
+
+.card:hover .decoration{
+    height: 30%;
+}
+
+.card:hover .button{
+    display: block;
 }
