--- a/client-2/src/components/navBar/NavBar.module.css
+++ b/client-2/src/components/navBar/NavBar.module.css
@@ -1,30 +1,29 @@
 .nav{
     display: flex;
     flex-direction: row;
-    height: 100px;
+    height: 11rem;
     width: 100%;
-    background:  #0b0149;
+    background: linear-gradient(0turn, #0000003b, #000000d1);
     align-items: center;
     justify-content: center;
     gap: 20px;
 }
 
 .nav .navButton{
-    width: 100px;
-    height: 30px;
-    border: none;
+    width: 9rem;
+    height: 2.5rem;
+    border: solid .1rem white;
     border-radius: 5px;
-    background-color: rgb(255 255 255);
-    color: rgb(255 111 0);
+    background-color:transparent;
+    color:  rgb(255, 255, 255);
     cursor: pointer;
     transition: all .3s;
-    font-size: 1em;
+    font-size: 1.25em;
     font-weight: 800;
 }
 
 .navButton:hover{
-    background-color: rgb(255, 123, 0);
-    color:  rgb(248, 248, 248);
+    background-color: rgb(0 0 0 / 42%);
     transform: scale(1.05);
 }
 
