--- a/client-2/src/components/card/Card.module.css
+++ b/client-2/src/components/card/Card.module.css
@@ -7,7 +7,7 @@
     width: 350px;
     aspect-ratio: 13/16;
     border-radius: 5px;
-    padding: 8px;
+    padding: .4rem;
     transition: all .3s;
     background-color: #ffffff;
     color: #775909;
@@ -15,13 +15,13 @@
 -webkit-box-shadow: 3px 6px 12px 5px rgba(0, 0, 0, 0.75);
 -moz-box-shadow: 3px 6px 12px 5px rgba(0, 0, 0, 0.75);
 font-size: 1.2em;
+cursor: pointer;
 }
 
 .img{
     width: 100%;
     height: 70%;
     background-size: cover;
-    z-index: 10;
     transition: all .3s;
 }
 
@@ -29,40 +29,9 @@ font-size: 1.2em;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
-    margin: .6rem;
+    /* gap: 20px; */
+    margin-top: .6rem;
     text-align: center;
-}
-
-.card:hover{
-    transform: scale(1.05);
-}
-
-.button{
-    width: 120px;
-    height: 38px;
-    background-color: transparent;
-    color: #775909;
-    border: solid 1px #775909;
-    border-radius: 5px;
-    transition: all .3s;
-    font-weight: 600;
-    font-size: .8em;
-    display: none;
-}
-
-.button:hover{
-    cursor: pointer;
-    background-color: rgb(247, 245, 245);
-    color: #0b0149;
-}
-
-.detailDiets{
-    text-align: start;
-    display: flex;
-    flex-direction: row;
-    gap: 5px;
-    font-size: .8em;
 }
 
 .detailName{
@@ -70,27 +39,76 @@ font-size: 1.2em;
     letter-spacing: .13em;
 }
 
-.decoration{
+.detailInfo{
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    padding-bottom: .5rem;
     height: 1.5rem;
     position: absolute;
     bottom: 0;
     background: linear-gradient(0turn, #775909, #ffffff);
     transition: all .3s;
+    color: black;
+    /* height: 30%; */
 }
 
 .icon{
     margin-top: 0rem;
 }
 
+.detailDiets{
+    padding-top: .3rem;
+    width: 100%;
+    height: 60%;
+    text-align: center;
+    font-size: .75em;
+    display: none;
+}
+
+
+.button{
+    width: 120px;
+    height: 38px;
+    background-color: transparent;
+    color: #ffffff;
+    border: solid .2rem #f8f8f8;
+    border-radius: 5px;
+    transition: all .3s;
+    font-weight: 600;
+    font-size: .8em;
+    display: none;
+}
+
+.link{
+    text-decoration: none;
+}
+
+.card:hover{
+    transform: scale(1.05);
+}
+
 .card:hover .img{
     height: 50%;
 }
 
-.card:hover .decoration{
+.card:hover .detailInfo{
     height: 30%;
+}
+
+.card:hover .detailDiets{
+    display: block;
 }
 
 .card:hover .button{
     display: block;
+}
+
+
+.button:hover{
+    cursor: pointer;
+    background-color: rgb(247, 245, 245);
+    color: #775909;
 }
