--- a/client-2/src/pages/details/Detail.module.css
+++ b/client-2/src/pages/details/Detail.module.css
@@ -4,7 +4,7 @@
     width: 100%;
     align-items: center;
     gap: 3rem;
-    background-color:  rgba(255,139,0);
+    background-color: #00000091;
     color: white;
 }
 
