--- a/client-2/src/pages/home/Home.module.css
+++ b/client-2/src/pages/home/Home.module.css
@@ -87,5 +87,33 @@
 .filterTwo{
     width: 100%;
     display: flex;
+    flex-direction: row;
     justify-content: space-around;
+    
 }
+
+.filterTwo > div{
+    width: auto;
+    display: flex;
+    gap: 1rem;
+}
+
+.filterTwo > div > div > label{
+    background-color: transparent;
+    border: .2rem solid white ;
+    color: rgb(255, 255, 255);
+    padding: .8rem;
+    cursor: pointer;
+    font-weight: 600;
+    font-family: Inter;
+}
+
+.filterTwo > div > div > input[type="radio"]{
+    display: none;
+}
+
+.filterTwo > div > div > input[type="radio"]:checked + label{
+    background-color: rgb(255, 255, 255);
+    color: black;
+}
+
