--- a/client-2/src/components/paginado/Paginado.module.css
+++ b/client-2/src/components/paginado/Paginado.module.css
@@ -13,32 +13,39 @@
     font-weight: 900;
     width: 40px;
     padding: 3px;
-    background-color: white;
-    color: #0b0149;
+    background-color: rgb(0 0 0 / 68%);
+    color: #fefefe;
     border: none;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
+    border: solid 0.2rem white;;
 }
 
 .button:hover{
-    border-bottom: solid .3rem #0b0149;
+    transform: scale(1.1);
     cursor: pointer;
 }
 
 .isActive{
-    background-color: #0b0149;
-    color: white;
+    background-color: #f1f1f1;
+    color: #000000;
 }
 
 .mov{
     border-radius: 1rem;
     width: 7rem;
     height: 2rem;
-    background-color: #0b0149;
-    color: white;
+    background-color: #000000b8;
+    color: #ffffff;
     cursor: pointer;
+    border: 0.2rem solid white;
     transition: all .15s;
+    font-weight: 600;
 }
 
 .mov:hover{
     transform: scale(1.1);
+}
+
+.mov svg{
+    font-size: 1.5em;
 }
